--- a/about.html
+++ b/about.html
@@ -1,5 +1,21 @@
-<html>
-  <head></head>
+<!DOCTYPE html>
+<html lang="en"> 
+
+ <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+  </head>
+    
+    <nav role='navigation'>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="resume.html">Clients</a></li>
+    <li><a href="portfolio.html">Contact Us</a></li>
+  </ul>
+</nav>  
+    
   <body>
     <h1>Nathan Peters</h1>
   </body>
