Updated About.html from Code Pen

--- a/about.html
+++ b/about.html
@@ -4,17 +4,47 @@
  <html>
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <h1>Nathan Peters</h1>
   </head>
-    
-    <nav role='navigation'>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="resume.html">Clients</a></li>
-    <li><a href="portfolio.html">Contact Us</a></li>
-  </ul>
-</nav>  
+
+<p>Senior in college ready to graduate.</p>
+
+<h2>Contact</h2>
+
+<ul>
+<li><a href="npeters@eagles.ewu.edu">Email Me!</a></li>
+<li><a href="http://npeters10.github.io">Visit My Website!</a></li>
+<li>natepeters_</li>
+</ul>
+
+<blockquote>
+<p>Sieze <strong>the</strong> <em>Day</em></p>
+</blockquote>
+
+<hr>
+
+<h2>Favorite Things</h2>
+
+<ol>
+<li>Relaxation</li>
+<li>Free Time</li>
+<li>Television</li>
+</ol>
+
+<ul>
+<li>Seahawks</li>
+<li>Mariners</li>
+<li>Rainiers</li>
+<li><a href="http://facebook.com">Facebook</a></li>
+</ul>
+
+<h2>Fav Vid</h2>
+
+<iframe width="420" height="315" src="https://www.youtube.com/embed/IzqMrhG50q0" frameborder="0" allowfullscreen></iframe>
+
+<h2>Fav Song</h2>
+
+<iframe width="420" height="315" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/113350024&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
     
   <body>
     <h1>Nathan Peters</h1>
