--- a/resume.html
+++ b/resume.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="normalize" href="css/normalize.css">
     <title>Document</title>
 </head>
 <body>
 
-      
-      <nav role='navigation'>
+<h1>Nathan Peters</h1>      
+<nav role='navigation'>
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="resume.html">Resume</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
+   <li><a href="portfolio.html">Portfolio</a></li>
+   <li><a href="resume.html">Resume</a></li>
+   <li><a href="about.html">About</a></li>
+   <li><a href="index.html">Home</a></li>
   </ul>
 </nav>  
       
