--- a/resume.html
+++ b/resume.html
@@ -34,8 +34,35 @@
 <li><a href="http://npeters10.github.io">Professional Website</a></li>
 <li><a href="http://linkedin.com/in/petersnathan">Linkedin Profile</a></li>
 <li><a href="http://codepen.io/npeters">CodePen Profile</a></li>
-<li><a href="http://github.io/npeters10">GitHub Profile</a></li>
+<li><a href="http://github.com/npeters10">GitHub Profile</a></li>
 </ul>
+
+<hr>
+
+<h2>Skillsets</h2>
+
+<h3>Communication</h3>
+<ul>
+    <li>Interveiwing</li>
+    <li>Editing</li>
+    <li>Writing</li>
+</ul>
+
+<h3>Administration</h3>
+<ul>
+    <li>Task Delegation</li>
+    <li>Team Management</li>
+    <li>Project Management</li>
+</ul>
+
+<h3>Technology</h3>
+<ul>
+    <li>Adobe Creative Suite</li>
+    <li>Microsoft Office Suite</li>
+    <li>Social Media Platforms</li>
+</ul>
+
+<hr>
 
 <h2>Education</h2>
 
@@ -44,6 +71,12 @@
 <li>Bachelor of Arts: Visual Communication Design</li>
 <li>09.2014 - current</li>
 </ul>
+<p>Involvement: </p>
+<ul>
+<li>University Honors Program (2014 - Present)</li>
+<li>Sigma Phi Epsilon Fraternity (2014 - Present)</li>
+<li>Public Relations Student Society of America (2014 - Present)</li>
+</ul>
 
 <ul>
 <li><h3>South Puget Sound Community College</h3></li>
@@ -51,11 +84,18 @@
 <li>Associate in General Studies</li>
 <li>09.2012 - 06.2014</li>
 </ul>
+<p>Involvement: </p>
+<ul>
+<li>All-Washington Academic Team (2014)</li>
+<li>Phi Theta Kappa International Honor Society (2012 - 2014)</li>
+</ul>
 
-<h2>Experience</h2>
+<hr>
+
+<h2>Relevant Experience</h2>
 
 <h3>Student Services Representative</h3>
-    <h5>Associated Students of Eastern Washington University</h5>
+    <h4>Associated Students of Eastern Washington University</h4>
     <p>Eastern Washington University, Cheney, WA <i>06.2015 - Present</i></p>
 
 <ul>
@@ -65,7 +105,7 @@
 </ul>
 
 <h3>Writing Tutor</h3>
-    <h5>The Writers' Center</h5>
+    <h4>The Writers' Center</h4>
     <p>Eastern Washington University, Cheney, WA <i>09.2014 - Present</i></p>
 
 <ul>
@@ -74,8 +114,28 @@
     <li><strong>Update</strong> social media with writing resources and other pertinent information</li>
 </ul>
 
+<h3>Marketing and Public Affairs Intern</h3>
+    <h4>Capital Medical Center</h4>
+    <p>Olympia, WA <i>07.2015 - 09.2015</i></p>
+
+<ul>
+<li><strong>Develop</strong> webpages and content for 12 clinics and the health care providers</li>
+    <li><strong>Write</strong> marketing copy for external advertising (bill boards, print ads, and online ads)</li>
+    <li><strong>Design</strong> internal templates for departments (transition old brochures to updated rack card templates)</li>
+</ul>
+
+<h3>Community Relations Intern</h3>
+    <h4>Spokane Public School District Foundation</h4>
+    <p>Spokane, WA <i>03.2015 - 06.2015</i></p>
+
+<ul>
+<li><strong>Coordinate</strong> SPSD Foundation fundraising event (volunteers, program, groups, reservations)</li>
+    <li><strong>Update</strong> SPSD Foundation Wordpress website with content and graphics</li>
+    <li><strong>Design</strong> marketing and informational materials for SPSD Foundation fundraising event</li>
+</ul>
+
 <h3>Managing Editor</h3>
-    <h5>The Easterner</h5>
+    <h4>The Easterner</h4>
     <p>Eastern Washington University, Cheney, WA <i>09.2014 - 06.2015</i></p>
 
 <ul>
@@ -85,13 +145,24 @@
     <li><strong>Create</strong> and edit page designs and graphics for weekly print/online publication</li>
 </ul>
 
-<h2>Skillsets</h2>
+<hr>
 
-<h3>Photography</h3>
+<h2>Professional Development</h2>
 
-<h3>Illustration</h3>
+<h3>President</h3>
+<h4>Sigma Phi Epsilon Fraternity, Washington Gamma RLC Chapter</h4>
+    <p>Eastern Washington University, Cheney, WA <i>05.2015 - Present</i></p>
 
-<h3>Graphic Design</h3>
+<ul>
+   <li><strong>Strategically</strong> plan a 5-year vision for the chapter</li>
+    <li><strong>Disseminate</strong> information from the university and national headquarters to chapter</li>
+    <li><strong>Delegate</strong> tasks among the chapter executive officers</li>
+    <li><strong>Write</strong> content as needed for print/online publication</li>
+    <li><strong>Attend</strong> meetings on behalf of the chapter</li>
+</ul>
+
+
+
       
     
 </body>
