--- a/about.html
+++ b/about.html
@@ -4,11 +4,12 @@
  <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="normalize" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <h1>Nathan Peters</h1>
   </head>
 
+<div id="wrap">
 <body>  
 <nav role='navigation'>
   <ul>
@@ -24,10 +25,11 @@
 <ul>
 <li><a href="npeters@eagles.ewu.edu">Email Me!</a></li>
 <li><a href="http://npeters10.github.io">Visit My Website!</a></li>
-<li>natepeters_</li>
+<li>@natepeters_</li>
 </ul>
 
     
   </body>
+  </div>
   
 </html>
