--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="normalize" href="css/normalize.css">
+    <link rel="portfolio" href="css/portfolio_styles.css">
+    <title>Portfolio</title>
     <h1>Nathan Peters</h1>
   </head>
 
@@ -18,3 +20,71 @@
    <li><a href="index.html">Home</a></li>
   </ul>
 </nav> 
+
+
+
+  
+  <ul class="lb-album" id="gallery">
+
+<!-- Single Gallery Item -->
+  <li>
+<!-- Thumbnail -->
+    <a href="#image-1">
+      <img src="http://placehold.it/50x50" alt="image01">
+    </a>
+<!-- Overlay Fullsize -->    
+    <div class="lb-overlay" id="image-1">
+      <img src="http://placehold.it/400x300" alt="" />
+      <div>
+        <h3>Item 1</h3>
+        <p>Item #1: Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <!-- In Gallery Navigation -->
+        <a href="#image-3" class="lb-prev">Prev</a>
+        <a href="#image-2" class="lb-next">Next</a>
+      </div>
+      <a href="#gallery" class="lb-close">x Close</a>
+    </div>
+  </li>
+
+<!-- Single Gallery Item -->
+  <li>
+<!-- Thumbnail -->
+    <a href="#image-2">
+      <img src="http://placehold.it/50x50" alt="image01">
+    </a>
+<!-- Overlay Fullsize -->    
+    <div class="lb-overlay" id="image-2">
+      <img src="http://placehold.it/400x300" alt="" />
+      <div>
+        <h3>Item 2</h3>
+        <p>Item #2: Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <!-- In Gallery Navigation -->
+        <a href="#image-1" class="lb-prev">Prev</a>
+        <a href="#image-3" class="lb-next">Next</a>
+      </div>
+      <a href="#gallery" class="lb-close">x Close</a>
+    </div>
+  </li>  
+    
+<!-- Single Gallery Item -->
+  <li>
+<!-- Thumbnail -->
+    <a href="#image-3">
+      <img src="http://placehold.it/50x50" alt="image01">
+    </a>
+<!-- Overlay Fullsize -->    
+    <div class="lb-overlay" id="image-3">
+      <img src="http://placehold.it/400x300" alt="" />
+      <div>
+        <h3>Item 3</h3>
+        <p>Item #3: Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <!-- In Gallery Navigation -->
+        <a href="#image-2" class="lb-prev">Prev</a>
+        <a href="#image-1" class="lb-next">Next</a>
+      </div>
+      <a href="#gallery" class="lb-close">x Close</a>
+    </div>
+  </li>      
+  
+</ul>
+  
