--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="normalize" href="css/normalize.css">
     <link rel="portfolio" href="css/portfolio_styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
     <title>Portfolio</title>
     <h1>Nathan Peters</h1>
   </head>
