--- a/about.html
+++ b/about.html
@@ -3,23 +3,31 @@
 
  <html>
   <head>
+   <title>About</title>
     <meta charset="UTF-8">
     <link rel="normalize" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <h1>Nathan Peters</h1>
+    <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
   </head>
+  
 
+<body>
+    <header>
+        <a href="index.html" id="logo">
+            <h1>Nathan Peters</h1>
+            <h2>Designer</h2>
+        </a>  
+        <nav>
+          <ul>
+           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="resume.html">Resume</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="index.html">Home</a></li>
+          </ul>
+        </nav> 
+    </header>
 <div id="wrap">
-<body>  
-<nav role='navigation'>
-  <ul>
-   <li><a href="portfolio.html">Portfolio</a></li>
-   <li><a href="resume.html">Resume</a></li>
-   <li><a href="about.html">About</a></li>
-   <li><a href="index.html">Home</a></li>
-  </ul>
-</nav> 
-
 <h2>Contact</h2>
 
 <ul>
