--- a/portfolio.html
+++ b/portfolio.html
@@ -10,19 +10,24 @@
     <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
     <title>Portfolio</title>
-    <h1>Nathan Peters</h1>
   </head>
 
 <body>  
-<nav role='navigation'>
-  <ul>
-   <li><a href="portfolio.html">Portfolio</a></li>
-   <li><a href="resume.html">Resume</a></li>
-   <li><a href="about.html">About</a></li>
-   <li><a href="index.html">Home</a></li>
-  </ul>
-</nav> 
-
+<header>
+        <a href="index.html" id="logo">
+            <h1>Nathan Peters</h1>
+            <h2>Designer</h2>
+        </a>  
+        <nav>
+          <ul>
+           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="resume.html">Resume</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="index.html">Home</a></li>
+          </ul>
+        </nav> 
+    </header>
+<div id="wrap">
 
 
   
@@ -89,4 +94,7 @@
   </li>      
   
 </ul>
-  
+
+
+</div> 
+</body> 
