--- a/about.html
+++ b/about.html
@@ -6,9 +6,8 @@
    <title>About</title>
     <meta charset="UTF-8">
     <link rel="normalize" href="css/normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
   </head>
   
 
