--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="normalize" href="css/normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
   </head>
     
   <body>
@@ -18,7 +17,7 @@
         </a>  
         <nav>
           <ul>
-           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="portfolio.html" class="selected">Portfolio</a></li>
            <li><a href="resume.html">Resume</a></li>
            <li><a href="about.html">About</a></li>
            <li><a href="index.html">Home</a></li>
