--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="normalize" href="css/normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
     <title>Resume</title>
 </head>
 <body>
