--- a/about.html
+++ b/about.html
@@ -19,22 +19,25 @@
         </a>  
         <nav>
           <ul>
-           <li><a href="portfolio.html">Portfolio</a></li>
-           <li><a href="resume.html">Resume</a></li>
-           <li><a href="about.html">About</a></li>
-           <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           </ul>
         </nav> 
     </header>
+    
 <div id="wrap">
+<p>My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better for world tomorrow.</p>
+
 <h2>Contact</h2>
 
 <ul>
-<li><a href="npeters@eagles.ewu.edu">Email Me!</a></li>
-<li><a href="http://npeters10.github.io">Visit My Website!</a></li>
-<li>@natepeters_</li>
+<li><a href="http://npeters10.github.io">Professional Website</a></li>
+<li><a href="http://linkedin.com/in/petersnathan">Linkedin Profile</a></li>
+<li><a href="http://codepen.io/npeters">CodePen Profile</a></li>
+<li><a href="http://github.com/npeters10">GitHub Profile</a></li>
 </ul>
-
     
   </body>
   </div>
