--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         </a>  
         <nav>
           <ul>
-           <li><a href="portfolio.html" class="selected">Portfolio</a></li>
-           <li><a href="resume.html">Resume</a></li>
-           <li><a href="about.html">About</a></li>
-           <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
           </ul>
         </nav> 
     </header>
 <div id="wrap"> 
 
-<img src="img/npeters_headshot.jpg" />
-      
+<img class="selfie" src="img/npeters_headshot.jpg" />
+<p>My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better for world tomorrow.</p>
 </div>      
 </body>
     
