--- a/portfolio.html
+++ b/portfolio.html
@@ -17,18 +17,21 @@
         </a>  
         <nav>
           <ul>
-           <li><a href="portfolio.html">Portfolio</a></li>
-           <li><a href="resume.html">Resume</a></li>
-           <li><a href="about.html">About</a></li>
-           <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
           </ul>
         </nav> 
     </header>
-<div id="wrap">
 
 
   
-  <div id="wrapper">
+  <div id="wrap">
+     
+     <p>My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better for world tomorrow.</p>
+     <p>This gallery is work designed and created by me in various settings ranging from hospitals to tutoring centers.</p>
+     
       <section>
         <ul id="gallery">
           <li>
