--- a/resume.html
+++ b/resume.html
@@ -14,18 +14,18 @@
             <h2>Designer</h2>
         </a>  
         <nav>
-          <ul>
-           <li><a href="portfolio.html">Portfolio</a></li>
-           <li><a href="resume.html">Resume</a></li>
-           <li><a href="about.html">About</a></li>
-           <li><a href="index.html">Home</a></li>
-          </ul>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
         </nav> 
     </header>
 <div id="wrap">
       
 <h1>Resume</h1>
-<p>My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better world tomorrow.</p>
+<p>My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better for world tomorrow.</p>
     
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="448" height="448" viewBox="0 0 448 448"><g id="icomoon-ignore">
 </g>
