--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="normalize" href="css/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="responsive" href="css/responsive.css">
   </head>
   
 
