Making responsive website
Adding in the media queries.
Changing the layout with color.

--- a/resume.html
+++ b/resume.html
@@ -28,13 +28,6 @@
 <h1>Resume</h1>
 <p>My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better for world tomorrow.</p>
     
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="448" height="448" viewBox="0 0 448 448"><g id="icomoon-ignore">
-</g>
-<path d="M367 95q7 7 12 19t5 22v288q0 10-7 17t-17 7h-336q-10 0-17-7t-7-17v-400q0-10 7-17t17-7h224q10 0 22 5t19 12zM256 34v94h94q-2.5-7.25-5.5-10.25l-78.25-78.25q-3-3-10.25-5.5zM352 416v-256h-104q-10 0-17-7t-7-17v-104h-192v384h320zM223.5 267.75q8.25 6.5 21 14 14.75-1.75 29.25-1.75 36.75 0 44.25 12.25 4 5.5 0.5 13 0 0.25-0.25 0.5l-0.5 0.5v0.25q-1.5 9.5-17.75 9.5-12 0-28.75-5t-32.5-13.25q-55.25 6-98 20.75-38.25 65.5-60.5 65.5-3.75 0-7-1.75l-6-3q-0.25-0.25-1.5-1.25-2.5-2.5-1.5-9 2.25-10 14-22.875t33-24.125q3.5-2.25 5.75 1.5 0.5 0.5 0.5 1 13-21.25 26.75-49.25 17-34 26-65.5-6-20.5-7.625-39.875t1.625-31.875q2.75-10 10.5-10h5.5q5.75 0 8.75 3.75 4.5 5.25 2.25 17-0.5 1.5-1 2 0.25 0.75 0.25 2v7.5q-0.5 30.75-3.5 48 13.75 41 36.5 59.5zM79.5 370.5q13-6 34.25-39.5-12.75 10-21.875 21t-12.375 18.5zM179 140.5q-3.75 10.5-0.5 33 0.25-1.75 1.75-11 0-0.75 1.75-10.75 0.25-1 1-2-0.25-0.25-0.25-0.5t-0.125-0.375-0.125-0.375q-0.25-5.5-3.25-9 0 0.25-0.25 0.5v0.5zM148 305.75q33.75-13.5 71-20.25-0.5-0.25-3.25-2.375t-4-3.375q-19-16.75-31.75-44-6.75 21.5-20.75 49.25-7.5 14-11.25 20.75zM309.5 301.75q-6-6-35-6 19 7 31 7 3.5 0 4.5-0.25 0-0.25-0.5-0.75z"></path>
-</svg><a href="resume.html">Resume</a>
-
-    
-
 <h2>Contact</h2>
 
 <ul>
@@ -48,26 +41,32 @@
 
 <h2>Skillsets</h2>
 
+<section>
 <h3>Communication</h3>
 <ul>
     <li>Interveiwing</li>
     <li>Editing</li>
     <li>Writing</li>
 </ul>
+</section>
 
+<section>
 <h3>Administration</h3>
 <ul>
     <li>Task Delegation</li>
     <li>Team Management</li>
     <li>Project Management</li>
 </ul>
+</section>
 
+<section>
 <h3>Technology</h3>
 <ul>
     <li>Adobe Creative Suite</li>
     <li>Microsoft Office Suite</li>
     <li>Social Media Platforms</li>
 </ul>
+</section>
 
 <hr>
 
@@ -76,7 +75,7 @@
 <ul>
 <li><h3>Eastern Washington University</h3></li>
 <li>Bachelor of Arts: Visual Communication Design</li>
-<li>09.2014 - current</li>
+<li>09.2014 - Present</li>
 </ul>
 <p>Involvement: </p>
 <ul>
@@ -103,7 +102,7 @@
 
 <h3>Student Services Representative</h3>
     <h4>Associated Students of Eastern Washington University</h4>
-    <p>Eastern Washington University, Cheney, WA <i>06.2015 - Present</i></p>
+    <p>Eastern Washington University, Cheney, WA | <i>06.2015 - Present</i></p>
 
 <ul>
 <li><strong>Liason</strong> between the students and administration of the university about student services</li>
@@ -113,7 +112,7 @@
 
 <h3>Writing Tutor</h3>
     <h4>The Writers' Center</h4>
-    <p>Eastern Washington University, Cheney, WA <i>09.2014 - Present</i></p>
+    <p>Eastern Washington University, Cheney, WA | <i>09.2014 - Present</i></p>
 
 <ul>
     <li><strong>Guide</strong> students through the writing process of various disciplines</li>
@@ -123,7 +122,7 @@
 
 <h3>Marketing and Public Affairs Intern</h3>
     <h4>Capital Medical Center</h4>
-    <p>Olympia, WA <i>07.2015 - 09.2015</i></p>
+    <p>Olympia, WA | <i>07.2015 - 09.2015</i></p>
 
 <ul>
 <li><strong>Develop</strong> webpages and content for 12 clinics and the health care providers</li>
@@ -133,7 +132,7 @@
 
 <h3>Community Relations Intern</h3>
     <h4>Spokane Public School District Foundation</h4>
-    <p>Spokane, WA <i>03.2015 - 06.2015</i></p>
+    <p>Spokane, WA | <i>03.2015 - 06.2015</i></p>
 
 <ul>
 <li><strong>Coordinate</strong> SPSD Foundation fundraising event (volunteers, program, groups, reservations)</li>
@@ -143,7 +142,7 @@
 
 <h3>Managing Editor</h3>
     <h4>The Easterner</h4>
-    <p>Eastern Washington University, Cheney, WA <i>09.2014 - 06.2015</i></p>
+    <p>Eastern Washington University, Cheney, WA | <i>09.2014 - 06.2015</i></p>
 
 <ul>
     <li><strong>Manage</strong> 36 student employees: including hiring, training, facilitating meetings, and delegating tasks</li>
@@ -158,7 +157,7 @@
 
 <h3>President</h3>
 <h4>Sigma Phi Epsilon Fraternity, Washington Gamma RLC Chapter</h4>
-    <p>Eastern Washington University, Cheney, WA <i>05.2015 - Present</i></p>
+    <p>Eastern Washington University, Cheney, WA | <i>05.2015 - Present</i></p>
 
 <ul>
    <li><strong>Strategically</strong> plan a 5-year vision for the chapter</li>
