--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
 <div id="wrap"> 
 
-<img class="selfie" src="img/npeters_headshot.jpg" />
-<p>My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better for world tomorrow.</p>
+<img id="primary" src="img/npeters_headshot.jpg" />
+<p id="secondary">My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better for world tomorrow.</p>
 </div>      
 </body>
     
