--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <link rel="normalize" href="css/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="responsive" href="css/responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
 </head>
 <body>
