Last Update for now

--- a/about.html
+++ b/about.html
@@ -29,16 +29,19 @@
     </header>
     
 <div id="wrap">
+<section class="primary">
 <p>My name is Nathan Peters. I am a senior at Eastern Washington University earning my Bachelor of Arts in Visual Communication Design with a minor in journalism. I want to work in student affairs for higher education. I believe equipping and inspiring young leaders while in college will result in a better world for tomorrow.</p>
+</section>
 
+<section class="secondary">
 <h2>Contact</h2>
-
-<ul>
-<li><a href="http://npeters10.github.io">Professional Website</a></li>
-<li><a href="http://linkedin.com/in/petersnathan">Linkedin Profile</a></li>
-<li><a href="http://codepen.io/npeters">CodePen Profile</a></li>
-<li><a href="http://github.com/npeters10">GitHub Profile</a></li>
-</ul>
+    <ul>
+    <li><a href="http://npeters10.github.io">Professional Website</a></li>
+    <li><a href="http://linkedin.com/in/petersnathan">Linkedin Profile</a></li>
+    <li><a href="http://codepen.io/npeters">CodePen Profile</a></li>
+    <li><a href="http://github.com/npeters10">GitHub Profile</a></li>
+    </ul>
+</section>
     
   </body>
   </div>
